kubernetes/rag.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-gateway-service
  namespace: hawk
spec:
  ports:
  - name: rag-http
    port: 80
    protocol: TCP
    targetPort: 8000
  # The label selector should match the deployment labels & it is useful for prefix caching feature
  selector:
    app: rag-gateway
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-gateway
  namespace: hawk
  labels:
    app: rag-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-gateway
  template:
    metadata:
      labels:
        app: rag-gateway
    spec:
      volumes:
      - name: tmp
        emptyDir: {}
      - name: model-cache
        persistentVolumeClaim:
          claimName: rag-model-cache
      containers:
      - name: gateway
        image: immnan/rag-gateway:0.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: rag-http
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: model-cache
          mountPath: /models          
        resources:
          requests:
            cpu: "1"
            memory: 4Gi
          limits:
            cpu: "2"
            memory: 8Gi
