kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwen-3-service
  namespace: hawk
spec:
  ports:
  - name: llm-http
    port: 80
    protocol: TCP
    targetPort: 8000
  # The label selector should match the deployment labels & it is useful for prefix caching feature
  selector:
    app: qwen-3
  sessionAffinity: None
  type: ClusterIP
