kubernetes/vllm.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwen-3-service
  namespace: hawk
spec:
  ports:
  - name: llm-http
    port: 80
    protocol: TCP
    targetPort: 8000
  # The label selector should match the deployment labels & it is useful for prefix caching feature
  selector:
    app: qwen-3
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qwen-3
  namespace: hawk
  labels:
    app: qwen-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qwen-3
  template:
    metadata:
      labels:
        app: qwen-3
    spec:
      volumes:
      - name: cache-volume
        persistentVolumeClaim:
          claimName: qwen-3
      # vLLM needs to access the host's shared memory for tensor parallel inference.
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: "2Gi"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"          
      containers:
      - name: qwen-3
        image: vllm/vllm-openai:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c"]
        args:
        - >-
          vllm serve Qwen/Qwen2.5-7B-Instruct
          --gpu-memory-utilization 0.85
          --port 8000
          --tensor-parallel-size 1
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "4"
            memory: "16Gi"
            nvidia.com/gpu: "1"
          requests:
            cpu: "2"
            memory: "8Gi"
            nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: /root/.cache/huggingface
          name: cache-volume
        - name: shm
          mountPath: /dev/shm
        startupProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 10
          failureThreshold: 600
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 3
