kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hawk-ai-gateway
  namespace: hawk
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: hawk.ai
#    - name: https
#      protocol: HTTPS
#      port: 443
#      hostname: hawk.k8s.net
#      tls:
#        mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hawk-route
  namespace: hawk
spec:
  parentRefs:
    - name: hawk-ai-gateway
  hostnames:
    - hawk.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mistral-7b
          port: 80
